开启/关闭任务版本

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 server.port=9090
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.jackson.time-zone=GMT+8
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://119.29.10.25:3306/campus_share?useUnicode=true&amp;characterEncoding=UTF-8
@@ -12,3 +14,10 @@ spring.http.multipart.location=/home/jiong/static/
 #Sprint虚拟路径映射
 spring.mvc.static-path-pattern=/**
 spring.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/, classpath:/static/, classpath:/public/, file:${spring.http.multipart.location}
+
+#登录有效期 - 秒
+login.valid.seconds=3600
+
+#配置缓存时长 - 秒
+config.cache.seconds=3600
+
