--- a/pom.xml
+++ b/pom.xml
@@ -89,11 +89,11 @@
         <!--<finalName>mybatis-generator</finalName>-->
         <pluginManagement>
             <plugins>
-                <plugin>
+                <!--<plugin>
                     <groupId>org.mybatis.generator</groupId>
                     <artifactId>mybatis-generator-maven-plugin</artifactId>
                     <version>${mybatis-generator.version}</version>
-                    <!-- 数据库驱动  -->
+                    &lt;!&ndash; 数据库驱动  &ndash;&gt;
                     <dependencies>
                         <dependency>
                             <groupId>mysql</groupId>
@@ -101,7 +101,7 @@
                             <version>${mysql.version}</version>
                         </dependency>
                     </dependencies>
-                    <!-- 自动生成 -->
+                    &lt;!&ndash; 自动生成 &ndash;&gt;
                     <executions>
                         <execution>
                             <id>Generate MyBatis Artifacts</id>
@@ -109,14 +109,14 @@
                                 <goal>generate</goal>
                             </goals>
                             <configuration>
-                                <!--允许移动生成的文件-->
+                                &lt;!&ndash;允许移动生成的文件&ndash;&gt;
                                 <verbose>true</verbose>
-                                <!--允许覆盖生成的文件-->
+                                &lt;!&ndash;允许覆盖生成的文件&ndash;&gt;
                                 <overwrite>true</overwrite>
                             </configuration>
                         </execution>
                     </executions>
-                </plugin>
+                </plugin>-->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
@@ -127,36 +127,21 @@
                     </configuration>
                 </plugin>
 
+
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-jar-plugin</artifactId>
-                    <version>2.6</version>
+                    <artifactId>maven-assembly-plugin</artifactId>
+                    <version>2.5.5</version>
                     <configuration>
                         <archive>
                             <manifest>
-                                <addClasspath>true</addClasspath>
-                                <classpathPrefix>lib/</classpathPrefix>
                                 <mainClass>com.campus.share.App</mainClass>
                             </manifest>
                         </archive>
+                        <descriptorRefs>
+                            <descriptorRef>jar-with-dependencies</descriptorRef>
+                        </descriptorRefs>
                     </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-dependency-plugin</artifactId>
-                    <version>2.10</version>
-                    <executions>
-                        <execution>
-                            <id>copy-dependencies</id>
-                            <phase>package</phase>
-                            <goals>
-                                <goal>copy-dependencies</goal>
-                            </goals>
-                            <configuration>
-                                <outputDirectory>${project.build.directory}/lib</outputDirectory>
-                            </configuration>
-                        </execution>
-                    </executions>
                 </plugin>
 
             </plugins>
